--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-/**
-* Template Name: Presento
-* Updated: Jul 27 2023 with Bootstrap v5.3.1
-* Template URL: https://bootstrapmade.com/presento-bootstrap-corporate-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -960,7 +952,7 @@ section {
 
 .services .icon-box i {
   float: left;
-  margin-top: 15px;
+  margin-top: 10px;
   color: #e03a3c;
   font-size: 40px;
   line-height: 0;
@@ -997,6 +989,25 @@ section {
 --------------------------------------------------------------*/
 .portfolio .portfolio-item {
   margin-bottom: 30px;
+}
+
+.portfolio .about-btn{
+  margin-top: 20px;
+  padding: 8px 30px 9px 30px;
+  color: #fff;
+  border-radius: 50px;
+  transition: 0.3s;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 13px;
+  display: inline-flex;
+  align-items: center;
+  border: 2px solid #e03a3c;
+}
+
+.portfolio .about-btn:hover{
+background: #e35052;
+background: #e03a3c;
 }
 
 .portfolio #portfolio-flters {
