--- a/assets/css/service1.css
+++ b/assets/css/service1.css
@@ -10,7 +10,7 @@
     inset: -60px 0 0 -60px;
     z-index: -1;
     content: "";
-    background: url("../img/about-bg.png") top left;
+    background: url("../img/home/about-bg.png") top left;
     background-repeat: no-repeat;
   }
   
